release-notes/major10/10.4.0/migration.md
# Migration

This page describes how to update Valtimo from the previous version to the current.

* **Migrate form process 'Retrieve Document and link to Zaak' to process 'Link document to zaak'**

  Scope: front-end

  1. **Step1**

     Under the 'Admin' menu, go to the 'Process links' menu.
  2. **Step2**

     Select process 'Retrieve Document and link to Zaak'.
  3. **Step3**

     Click the service task 'Link Document to Zaak' and write down all properties of the process link. If no process
     link is configured, migrating is not necessary.
  4. **Step4**

     Click the service task 'Link Document to Zaak' and write down all properties of the process link. If no process
     link is configured, migrating is not necessary.
  5. **Step5**

     Now select the process 'Link document to zaak'.
  6. **Step6**

     Click the service task 'Link Document to Zaak' and configure the process link as was written down.
  7. **Step7**

     (Optional) You may now delete the process 'Retrieve Document and link to Zaak'. It is, however, not possible to
     delete a process from within Valtimo.

* **Breaking change 2/Deprecation 2**

  Scope: back-end/front-end

  1. **Step1**

      Description
  2. **Step2**

      Description
